Fixed layout issue after set background color

--- a/assets/rtpanel/scss/_footer.scss
+++ b/assets/rtpanel/scss/_footer.scss
@@ -5,7 +5,7 @@
 }
 
 /* Copyrights */
-#footer { clear: both; color: $gray; margin-bottom: 1em; text-align: center; // Self
+#footer { color: $gray; text-align: center; // Self
     // Footer Links
     a { border-bottom: 1px solid $border-color; // Self
         &:hover { text-decoration: none; }
